2002-10-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/GNUmakefile: build autogsdoc documentation automatically
	if possible.

2002-10-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSDebug.h: Make warn logs de-selectable at
	runtime by setting the NoWarn debug level.  Document.  Say that
	debug levels can be added by putting them in the GNU-Debug
	array in the defaults database.
	* Source/NSUserDefaults.m: Add contents of the GNU-Debug array to
	the set of active debug levels.
	* Tools/AGSParser.m: Updated with support for documenting macros.
	* Tools/AGSOutput.m: ditto
	* Tools/AGSHtml.m: ditto

2002-10-07  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSData.m: Update logging after checks for results of memory
	allocation.
	* Source/NSTimeZone.m: Don't abort on failure to allocate memory ...
	just print a log and continue returning a null pointer.

2002-10-06  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSData.m: readContentsOfFile() fix use of atomic memory
	on GC systems ... problem noticed by Fred.

Sat Oct  5 19:53:03 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSData.m ([NSDataMappedFile
	-initWithContentsOfMappedFile:]): release self and return nil -
	rather than returning NO, if the path is bad.

2002-10-05  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/AGSOutput.m: Improve warning code, support text output
	in chapter/section/subsection.
	* Tools/AGSParser.m: move concatenation of comments into a single
	method, make it insert a linebreak between concatenated comments,
	and make it refrain from appending the same comment onto itsself
	(which would happen if the same file was parsed twice, as both a
	header and as source).
	Treat the 'main()' function specially ... don't document it as a
	function but insert its comments at the end of the 'chapter' part
	of the output document.  These modifications make it easy to
	document a directory containing tools, by listing the tool source
	files as arguments to autogsdoc.