@@ -1,4 +1,4 @@
-/* Interface to ObjC runtime for GNUStep
+/** Interface to ObjC runtime for GNUStep
    Copyright (C) 1995, 1997, 2000 Free Software Foundation, Inc.
 
    Written by:  Andrew Kachites McCallum <mccallum@gnu.ai.mit.edu>
@@ -19,6 +19,10 @@
    You should have received a copy of the GNU Library General Public
    License along with this library; if not, write to the Free
    Software Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111 USA.
+
+    AutogsdocSource: NSObjCRuntime.m
+    AutogsdocSource: NSLog.m
+
    */ 
 
 #ifndef __NSObjCRuntime_h_GNUSTEP_BASE_INCLUDE
@@ -55,12 +59,17 @@ GS_EXPORT NSString	*NSStringFromClass(Class aClass);
 GS_EXPORT const char	*NSGetSizeAndAlignment(const char *typePtr,
   unsigned int *sizep, unsigned int *alignp);
 
+#ifndef	NO_GNUSTEP
 /* Logging */
 /* OpenStep spec states that log messages go to stderr, but just in case
    someone wants them to go somewhere else, they can implement a function
    like this */
 typedef void NSLog_printf_handler (NSString* message);
 GS_EXPORT NSLog_printf_handler	*_NSLog_printf_handler;
+GS_EXPORT int	_NSLogDescriptor;
+@class NSRecursiveLock;
+GS_EXPORT NSRecursiveLock	*GSLogLock();
+#endif
 
 GS_EXPORT void			NSLog (NSString* format, ...);
 GS_EXPORT void			NSLogv (NSString* format, va_list args);
